--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="cssfolder/styles.css">
     <script src="https://kit.fontawesome.com/bd2aa5876f.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&amp;display=swap" rel="stylesheet">
     <title>Document</title>
@@ -111,6 +111,6 @@
     <p class="footerp">copyright &copy; 2023 Avor Grace</p>
 </div>
 
-<script src="portfolio.js"></script>
+<script src="javascript/javascript.js"></script>
 </body>
 </html>
