--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <p>Hi, I'm <b> Grace Avor </b>a motivated and enthusiastic front-end developer 
                 seeking an opportunity to apply my skills and knowledge in creating responsive and user-friendly 
                 web interfaceces.</p> 
-                <div class="button-div">
+              <!--  <div class="button-div">
                     <a href="#contact" class="button1"> Hire me</a> 
-                </div>
+                </div> -->
         </div>
         <div class="imagediv">
             <img src="images/image2.jpg" class="image1" alt=""> 
