--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="cssfolder/styles.css">
     <script src="https://kit.fontawesome.com/bd2aa5876f.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&amp;display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>My portfolio</title>
 </head>
 <body>
     
