--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#skill">Skills</a></li>
             <li><a href="#Technologies">Technologies</a></li>             
             <li><a href="">Projects</a></li>
-            <li><a href="http://127.0.0.1:5500/portfolio.html#Contact%20Me">Home</a></li>
+            <li><a href="https://grace-avor.github.io/Src/">Home</a></li>
             </ul>
     </header>
 
