--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     
     <header>
         <ul class="main">
-            <li><i class="fa-solid fa-moon dark-mode" onclick="darkMode()"></i></li>
-           <!-- <li><a href="#contact">Contact</a></li>
+            <li class="moon"><i class="fa-solid fa-moon dark-mode" onclick="darkMode()"></i></li>
+            <li>
+                <a href="https://docs.google.com/document/d/1OmtMRpsIE12BGkICmDLw554QacPKCWspb01IZNCLEd4/edit?usp=drivesdk"> <i class="fa-solid fa-user"></i></a>
+            </li>
+                <!-- <li><a href="#contact">Contact</a></li>
             <li><a href="#skill">Skills</a></li>
             <li><a href="#Technologies">Technologies</a></li>             
             <li><a href="">Projects</a></li>
