--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <div class="contactdiv">
     <h2 id="contact">Get In Touch</h2>
     <p id="result" class="mail"></p>
-    <form id="myForm">
+    <form id="myForm" action="https://formspree.io/f/xjvlaqpe" method="POST">
         <input type="text" id="name" name="name"  placeholder="Name" class="input1" required><br>
         <input type="email" id="Email" name="Email" placeholder="Email" class="email" required> <br>
         <textarea id="comment" cols="20" rows="5" placeholder="Message" class="inputcomment" required ></textarea> <br>
