--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <body>
     <header>
       <ul class="main">
-        <li class="moon">
+        <!-- <li class="moon">
           <i class="fa-solid fa-moon dark-mode" onclick="darkMode()"></i>
-        </li>
+        </li> -->
         <li>
           <a
             href="https://docs.google.com/document/d/1OmtMRpsIE12BGkICmDLw554QacPKCWspb01IZNCLEd4/edit?usp=drivesdk"
@@ -28,11 +28,11 @@
             <i class="fa-solid fa-user"></i
           ></a>
         </li>
-        <!-- <li><a href="#contact">Contact</a></li>
-            <li><a href="#skill">Skills</a></li>
-            <li><a href="#Technologies">Technologies</a></li>             
-            <li><a href="">Projects</a></li>
-            <li><a href="https://grace-avor.github.io/Src/">Home</a></li> -->
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#skill">Skills</a></li>
+        <li><a href="#Technologies">Technologies</a></li>
+        <li><a href="">Projects</a></li>
+        <li><a href="https://grace-avor.github.io/Src/">Home</a></li>
       </ul>
     </header>
 
