--- a/index.html
+++ b/index.html
@@ -48,6 +48,46 @@
         <img src="images/image2.jpg" class="image1" alt="" />
       </div>
     </div>
+    <h2 class="projects">Projects</h2>
+    <!-- <div class="flexcontainer3>-->
+    <div class="flexcontainer3">
+      <div class="ignore"></div>
+      <div class="About1">
+        <div class="image-container project-container">
+          <img src="images/portfolio.jpg" class="images" alt="" />
+          <div class="buttom-center">
+            <h2>Portfolio</h2>
+            <p>
+              A simple portfolio showing my Projects, About me, my Skills, and
+              Technologies I am familiar with
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="About2">
+        <div class="image-container project-container">
+          <img src="images/weather.jpg" class="images" alt="" />
+          <div class="buttom-center">
+            <h2>Weather App</h2>
+            <p>
+              A simple Weather App that fetches data from openweathermap
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="About3">
+        <div class="image-container project-container">
+          <img src="images/writing.jpeg" class="images" alt="" />
+          <div class="buttom-center">
+            <h2>Passion Write</h2>
+            <p>
+              A simple one page about what I am passionate about
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <h2 class="Aboutme">About Me</h2>
     <div class="flexcontainer3">
       <div class="About1">
