--- a/index.html
+++ b/index.html
@@ -55,18 +55,12 @@
           I am Medical Laboratory Scientist with focus in Chemical Pathology. I
           studied the mechanism of body processes in relation to diseases.
         </p>
-        <div class="image-container">
-          <img src="images/lab.jpg" class="images" alt="Laboratory" />
-        </div>
       </div>
       <div class="About2">
         <p class="Ps">
           I developed passion for software engineering and presently focused in
           frontend development but I believe this is just the beginning.
         </p>
-        <div class="image-container">
-          <img src="images/laptop.jpg" class="images" alt="Laptop" />
-        </div>
       </div>
       <div class="About3">
         <p class="Ps">
@@ -74,9 +68,6 @@
           I'm in the laboratory saving lifes. Aside these, I see movies to help
           me relax.
         </p>
-        <div class="image-container">
-          <img src="images/Netflix.jpg" class="images" alt="Netflix" />
-        </div>
       </div>
     </div>
     <h2 class="projects">Projects</h2>
@@ -88,9 +79,11 @@
           <img src="images/portfolio.jpg" class="images" alt="" />
           <div class="buttom-center">
             <h2>Portfolio</h2>
-            <p>
-              A simple portfolio 
-            </p>
+            <p>A simple portfolio</p>
+            <ul>
+              <li class="code"><a href="">View</a></li>
+              <li><a href="" class="code">Source Code</a></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -99,9 +92,7 @@
           <img src="images/weather.jpg" class="images" alt="" />
           <div class="buttom-center">
             <h2>Weather App</h2>
-            <p>
-              A simple Weather App that fetches data from openweathermap
-            </p>
+            <p>A simple Weather App that fetches data from openweathermap</p>
           </div>
         </div>
       </div>
@@ -110,9 +101,7 @@
           <img src="images/writing.jpeg" class="images" alt="" />
           <div class="buttom-center">
             <h2>Passion Write</h2>
-            <p>
-              A simple one page about what I am passionate about
-            </p>
+            <p>A simple one page about what I am passionate about</p>
           </div>
         </div>
       </div>
