--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
   <body>
     <header>
       <ul class="main">
-        <!-- <li class="moon">
-          <i class="fa-solid fa-moon dark-mode" onclick="darkMode()"></i>
-        </li> -->
         <li>
           <a
             href="https://docs.google.com/document/d/1OmtMRpsIE12BGkICmDLw554QacPKCWspb01IZNCLEd4/edit?usp=drivesdk"
@@ -79,10 +76,15 @@
           <img src="images/portfolio.jpg" class="images" alt="" />
           <div class="buttom-center">
             <h2>Portfolio</h2>
+            <p class="portfolio-course-Ps">HTML + CSS + JS </p>
             <p>A simple portfolio</p>
             <ul>
-              <li class="code"><a href="">View</a></li>
-              <li><a href="" class="code">Source Code</a></li>
+              <li class="live">
+                <a href="https://grace-avor.github.io/Src/" class="a-of-portfolio">Live</a>
+              </li>
+              <li class="code">
+                <a href="https://github.com/Grace-Avor/Src" class="a-of-portfolio">Code</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -92,7 +94,16 @@
           <img src="images/weather.jpg" class="images" alt="" />
           <div class="buttom-center">
             <h2>Weather App</h2>
+            <p class="portfolio-course-Ps">HTML/Boostrap + CSS + JS</p>
             <p>A simple Weather App that fetches data from openweathermap</p>
+            <ul>
+              <li class="live">
+                <a href="https://weather-app-by-avor.vercel.app/" class="a-of-portfolio">Live</a>
+              </li>
+              <li class="code">
+                <a href="https://github.com/Grace-Avor/Weather-App" class="a-of-portfolio">Code</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
