changed portfolio image

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
         </li>
       </ul>
     </header>
-
     <h1>Frontend Developer</h1>
-
     <div class="flexcontainer" id="courses">
       <div class="introduction">
         <p>
@@ -75,15 +73,23 @@
         <div class="image-container project-container">
           <img src="images/portfolio.jpg" class="images" alt="" />
           <div class="buttom-center">
-            <h2>Portfolio</h2>
-            <p class="portfolio-course-Ps">HTML + CSS + JS </p>
+            <h3>Portfolio</h3>
+            <p class="portfolio-course-Ps">HTML + CSS + JS</p>
             <p>A simple portfolio</p>
             <ul>
               <li class="live">
-                <a href="https://grace-avor.github.io/Src/" class="a-of-portfolio">Live</a>
+                <a
+                  href="https://grace-avor.github.io/Src/"
+                  class="a-of-portfolio"
+                  >Live</a
+                >
               </li>
               <li class="code">
-                <a href="https://github.com/Grace-Avor/Src" class="a-of-portfolio">Code</a>
+                <a
+                  href="https://github.com/Grace-Avor/Src"
+                  class="a-of-portfolio"
+                  >Code</a
+                >
               </li>
             </ul>
           </div>
@@ -93,15 +99,23 @@
         <div class="image-container project-container">
           <img src="images/weather.jpg" class="images" alt="" />
           <div class="buttom-center">
-            <h2>Weather App</h2>
+            <h3>Weather App</h3>
             <p class="portfolio-course-Ps">HTML/Boostrap + CSS + JS</p>
             <p>A simple Weather App that fetches data from openweathermap</p>
             <ul>
               <li class="live">
-                <a href="https://weather-app-by-avor.vercel.app/" class="a-of-portfolio">Live</a>
+                <a
+                  href="https://weather-app-by-avor.vercel.app/"
+                  class="a-of-portfolio"
+                  >Live</a
+                >
               </li>
               <li class="code">
-                <a href="https://github.com/Grace-Avor/Weather-App" class="a-of-portfolio">Code</a>
+                <a
+                  href="https://github.com/Grace-Avor/Weather-App"
+                  class="a-of-portfolio"
+                  >Code</a
+                >
               </li>
             </ul>
           </div>
@@ -109,9 +123,9 @@
       </div>
       <div class="About3">
         <div class="image-container project-container">
-          <img src="images/writing.jpeg" class="images" alt="" />
+          <img src="images/write.jpeg" class="images" alt="" />
           <div class="buttom-center">
-            <h2>Passion Write</h2>
+            <h3>Passion Write</h3>
             <p>A simple one page about what I am passionate about</p>
           </div>
         </div>
