--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   </head>
   <body>
     <header>
-      <ul class="main">
+      <div class="main">
+      <ul>
         <li>
           <a
             href="https://docs.google.com/document/d/1OmtMRpsIE12BGkICmDLw554QacPKCWspb01IZNCLEd4/edit?usp=drivesdk"
@@ -26,12 +27,14 @@
           ></a>
         </li>
       </ul>
+      </div>
     </header>
-    <h1>Frontend Developer</h1>
+    
     <div class="flexcontainer" id="courses">
       <div class="introduction">
         <p>
-          Hi, I'm <b> Grace Avor </b>a motivated and enthusiastic front-end
+          <span class="intro">Hi, my name is</span> <br />
+          <span class="name"> Grace Avor Monami</span> <br /> I'm a motivated and enthusiastic front-end
           developer seeking an opportunity to apply my skills and knowledge in
           creating responsive and user-friendly web interfaceces.
         </p>
@@ -136,23 +139,23 @@
       <div class="course">
         <h2 id="Technologies">Technologies</h2>
         <ul class="courselist">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Javascript</li>
-          <li>React</li>
-          <li>C++</li>
-          <li>Git</li>
+          <li class="Lis">HTML</li>
+          <li class="Lis">CSS</li>
+          <li class="Lis">Javascript</li>
+          <li class="Lis">React</li>
+          <li class="Lis">C++</li>
+          <li class="Lis">Git</li>
         </ul>
       </div>
 
       <div class="additonal">
         <h2 id="skill">Soft Skills</h2>
         <ul class="skills">
-          <li>Knowledge of responsive web design</li>
-          <li>Strong problem solving and analytical skills</li>
-          <li>Teamwork</li>
-          <li>Engagement</li>
-          <li>Attention to details</li>
+          <li class="Lis">Knowledge of responsive web design</li>
+          <li class="Lis">Strong problem solving and analytical skills</li>
+          <li class="Lis">Teamwork</li>
+          <li class="Lis">Engagement</li>
+          <li class="Lis">Attention to details</li>
         </ul>
       </div>
 
@@ -184,7 +187,7 @@
           <textarea
             id="comment"
             cols="20"
-            rows="5"
+            rows="3"
             placeholder="Message"
             class="inputcomment"
             required
