Changed the portfolio text colors on the images

--- a/index.html
+++ b/index.html
@@ -78,20 +78,20 @@
           <div class="buttom-center">
             <h3>Portfolio</h3>
             <p class="portfolio-course-Ps">HTML + CSS + JS</p>
-            <p>A simple portfolio</p>
+            <p class="portfolio-ps">A simple portfolio</p>
             <ul>
               <li class="live">
                 <a
                   href="https://grace-avor.github.io/Src/"
                   class="a-of-portfolio"
-                  >Live</a
+                  ><b>Live</b></a
                 >
               </li>
               <li class="code">
                 <a
                   href="https://github.com/Grace-Avor/Src"
                   class="a-of-portfolio"
-                  >Code</a
+                  > <b>Code</b></a
                 >
               </li>
             </ul>
@@ -104,20 +104,20 @@
           <div class="buttom-center">
             <h3>Weather App</h3>
             <p class="portfolio-course-Ps">HTML/Boostrap + CSS + JS</p>
-            <p>A simple Weather App that fetches data from openweathermap</p>
+            <p class="portfolio-ps">A simple Weather App that fetches data from openweathermap</p>
             <ul>
               <li class="live">
                 <a
                   href="https://weather-app-by-avor.vercel.app/"
                   class="a-of-portfolio"
-                  >Live</a
+                  ><b>Live</b></a
                 >
               </li>
               <li class="code">
                 <a
                   href="https://github.com/Grace-Avor/Weather-App"
                   class="a-of-portfolio"
-                  >Code</a
+                  ><b>Code</b></a
                 >
               </li>
             </ul>
@@ -129,7 +129,7 @@
           <img src="images/write.jpeg" class="images" alt="" />
           <div class="buttom-center">
             <h3>Passion Write</h3>
-            <p>A simple one page about what I am passionate about</p>
+            <p class="portfolio-ps">A simple one page about what I am passionate about</p>
           </div>
         </div>
       </div>
