adjusted submit button, changed write-up image

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="buttom-center">
             <h3>Portfolio</h3>
             <p class="portfolio-course-Ps">HTML + CSS + JS</p>
-            <p class="portfolio-ps">A simple portfolio</p>
+            <p class="portfolio-ps">A responsive portfolio showing important informations about me</p>
             <ul>
               <li class="live">
                 <a
@@ -104,7 +104,7 @@
           <div class="buttom-center">
             <h3>Weather App</h3>
             <p class="portfolio-course-Ps">HTML/Boostrap + CSS + JS</p>
-            <p class="portfolio-ps">A simple Weather App that fetches data from openweathermap</p>
+            <p class="portfolio-ps">Vanilla Weather App that fetches data from openweathermap</p>
             <ul>
               <li class="live">
                 <a
@@ -126,10 +126,26 @@
       </div>
       <div class="About3">
         <div class="image-container project-container">
-          <img src="images/write.jpeg" class="images" alt="" />
+          <img src="images/Creative-writing.png" class="images" alt="" />
           <div class="buttom-center">
             <h3>Passion Write</h3>
-            <p class="portfolio-ps">A simple one page about what I am passionate about</p>
+            <p class="portfolio-ps">A website where i write things I am passionate about</p>
+            <ul>
+              <li class="live">
+                <a
+                  href=""
+                  class="a-of-portfolio"
+                  ><b>Live</b></a
+                >
+              </li>
+              <li class="code">
+                <a
+                  href=""
+                  class="a-of-portfolio"
+                  ><b>Code</b></a
+                >
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -139,23 +155,22 @@
       <div class="course">
         <h2 id="Technologies">Technologies</h2>
         <ul class="courselist">
-          <li class="Lis">HTML</li>
-          <li class="Lis">CSS</li>
-          <li class="Lis">Javascript</li>
-          <li class="Lis">React</li>
-          <li class="Lis">C++</li>
-          <li class="Lis">Git</li>
+          <li><span>HTML</span></li>
+          <li><span>CSS</span></li>
+          <li><span>Javascript</span></li>
+          <li><span>React</span></li>
+          <li><span>C++</span></li>
+          <li><span>Git</span></li>
         </ul>
       </div>
 
       <div class="additonal">
         <h2 id="skill">Soft Skills</h2>
         <ul class="skills">
-          <li class="Lis">Knowledge of responsive web design</li>
-          <li class="Lis">Strong problem solving and analytical skills</li>
-          <li class="Lis">Teamwork</li>
-          <li class="Lis">Engagement</li>
-          <li class="Lis">Attention to details</li>
+          <li><span>Knowledge of responsive web design</span></li>
+          <li><span>Strong problem solving and analytical skills </span></li>
+          <li><span>Teamwork</span></li>
+          <li><span>Engagement</span></li>
         </ul>
       </div>
 
