Removed the link to the weather app for now

--- a/index.html
+++ b/index.html
@@ -18,25 +18,26 @@
   <body>
     <header>
       <div class="main">
-      <ul>
-        <li>
-          <a
-            href="https://docs.google.com/document/d/1OmtMRpsIE12BGkICmDLw554QacPKCWspb01IZNCLEd4/edit?usp=drivesdk"
-          >
-            <i class="fa-solid fa-user"></i
-          ></a>
-        </li>
-      </ul>
+        <ul>
+          <li>
+            <a
+              href="https://docs.google.com/document/d/1OmtMRpsIE12BGkICmDLw554QacPKCWspb01IZNCLEd4/edit?usp=drivesdk"
+            >
+              <i class="fa-solid fa-user"></i
+            ></a>
+          </li>
+        </ul>
       </div>
     </header>
-    
+
     <div class="flexcontainer" id="courses">
       <div class="introduction">
         <p>
           <span class="intro">Hi, my name is</span> <br />
-          <span class="name"> Grace Avor Monami</span> <br /> I'm a motivated and enthusiastic front-end
-          developer seeking an opportunity to apply my skills and knowledge in
-          creating responsive and user-friendly web interfaceces.
+          <span class="name"> Grace Avor Monami</span> <br />
+          I'm a motivated and enthusiastic front-end developer seeking an
+          opportunity to apply my skills and knowledge in creating responsive
+          and user-friendly web interfaceces.
         </p>
         <div class="button-div">
           <a href="#contact" class="button1"> Hire me</a>
@@ -78,7 +79,9 @@
           <div class="buttom-center">
             <h3>Portfolio</h3>
             <p class="portfolio-course-Ps">HTML + CSS + JS</p>
-            <p class="portfolio-ps">A responsive portfolio showing important informations about me</p>
+            <p class="portfolio-ps">
+              A responsive portfolio showing important informations about me
+            </p>
             <ul>
               <li class="live">
                 <a
@@ -91,7 +94,8 @@
                 <a
                   href="https://github.com/Grace-Avor/Src"
                   class="a-of-portfolio"
-                  > <b>Code</b></a
+                >
+                  <b>Code</b></a
                 >
               </li>
             </ul>
@@ -104,21 +108,15 @@
           <div class="buttom-center">
             <h3>Weather App</h3>
             <p class="portfolio-course-Ps">HTML/Boostrap + CSS + JS</p>
-            <p class="portfolio-ps">Vanilla Weather App that fetches data from openweathermap</p>
+            <p class="portfolio-ps">
+              Vanilla Weather App that fetches data from openweathermap
+            </p>
             <ul>
               <li class="live">
-                <a
-                  href="https://weather-app-by-avor.vercel.app/"
-                  class="a-of-portfolio"
-                  ><b>Live</b></a
-                >
+                <a href="" class="a-of-portfolio"><b>Live</b></a>
               </li>
               <li class="code">
-                <a
-                  href="https://github.com/Grace-Avor/Weather-App"
-                  class="a-of-portfolio"
-                  ><b>Code</b></a
-                >
+                <a href="" class="a-of-portfolio"><b>Code</b></a>
               </li>
             </ul>
           </div>
@@ -129,21 +127,15 @@
           <img src="images/Creative-writing.png" class="images" alt="" />
           <div class="buttom-center">
             <h3>Passion Write</h3>
-            <p class="portfolio-ps">A website where i write things I am passionate about</p>
+            <p class="portfolio-ps">
+              A website where i write things I am passionate about
+            </p>
             <ul>
               <li class="live">
-                <a
-                  href=""
-                  class="a-of-portfolio"
-                  ><b>Live</b></a
-                >
+                <a href="" class="a-of-portfolio"><b>Live</b></a>
               </li>
               <li class="code">
-                <a
-                  href=""
-                  class="a-of-portfolio"
-                  ><b>Code</b></a
-                >
+                <a href="" class="a-of-portfolio"><b>Code</b></a>
               </li>
             </ul>
           </div>
