Added weather app link

--- a/index.html
+++ b/index.html
@@ -113,10 +113,18 @@
             </p>
             <ul>
               <li class="live">
-                <a href="" class="a-of-portfolio"><b>Live</b></a>
+                <a
+                  href="https://weather-app-by-avor.vercel.app/"
+                  class="a-of-portfolio"
+                  ><b>Live</b></a
+                >
               </li>
               <li class="code">
-                <a href="" class="a-of-portfolio"><b>Code</b></a>
+                <a
+                  href="https://github.com/Grace-Avor/Weather-App"
+                  class="a-of-portfolio"
+                  ><b>Code</b></a
+                >
               </li>
             </ul>
           </div>
