added images to movie app and gallery

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       > </a>
       <div id="myLinks">
         <a href="index.html">Home</a>
-        <a href="#contact">Contact Me</a>
-        <a href="#AboutMe">About</a>
+        <a href="#ContactMe">Contact</a>
+        <a href="#Aboutme">About</a>
       </div>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -43,14 +43,14 @@
           and user-friendly web interfaceces.
         </p>
         <div class="button-div">
-          <a href="#contact" class="button1"> Hire me</a>
+          <a href="#ContactMe" class="button1"> Hire me</a>
         </div>
       </div>
       <div class="imagediv">
         <img src="images/image2.jpg" class="image1" alt="" />
       </div>
     </div>
-    <h2 class="Aboutme">About Me</h2>
+    <h2 class="Aboutme" id="Aboutme">About Me</h2>
     <div class="flexcontainer3">
       <div class="About1">
         <p class="Ps">
@@ -179,7 +179,7 @@
       </div>
 
       <div class="contactdiv">
-        <h2 id="contact">Get In Touch</h2>
+        <h2 id="ContactMe">Get In Touch</h2>
         <p id="result" class="mail"></p>
         <form
           id="myForm"
