--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="image-container project-container">
           <img src="images/img.9.jpeg" class="images" alt="" />
           <div class="buttom-center">
-            <h3>Passion Write</h3>
+            <h3>Image Gallery</h3>
             <p class="portfolio-ps">
               A gallery with static images showing glass houses of my fantasies
             </p>
