--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>
           <span class="intro">Hi, my name is</span> <br />
           <span class="name"> Grace Avor Monami</span> <br />
-          I'm a motivated and enthusiastic front-end developer seeking an
+          I'm a motivated and enthusiastic <span class="front-end">Frontend</span> developer seeking an
           opportunity to apply my skills and knowledge in creating responsive
           and user-friendly web interfaceces.
         </p>
@@ -139,6 +139,7 @@
           <img src="images/img.9.jpeg" class="images" alt="" />
           <div class="buttom-center">
             <h3>Image Gallery</h3>
+            <p class="portfolio-course-Ps">React</p>
             <p class="portfolio-ps">
               A gallery with static images showing glass houses of my fantasies
             </p>
