added footer magin top

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="image-container project-container">
           <img src="images/Poster.png" class="images" alt="" />
           <div class="buttom-center">
-            <h3>Portfolio</h3>
+            <h3>Movie App</h3>
             <p class="portfolio-course-Ps">React</p>
             <p class="portfolio-ps">
               A responsive Movie-App that fetches API form IMDb, displaying the top-rated movies 
@@ -181,7 +181,8 @@
 
       <div class="contactdiv">
         <h2 id="ContactMe">Get In Touch</h2>
-        <p id="result" class="mail"></p>
+        <p class="mail">Email: graceavor2021@gmail.com</p>
+        <p class="mail">Tel: 08160361111</p>
         <form
           id="myForm"
           action="https://formspree.io/f/xnqyelja"
