Added projects to hamburger menu

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
       > </a>
       <div id="myLinks">
         <a href="index.html">Home</a>
-        <a href="#ContactMe">Contact</a>
         <a href="#Aboutme">About</a>
+        <a href="#ContactMe">Contact</a>
+        <a href="#Projects">Projects</a>
       </div>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -72,7 +73,7 @@
         </p>
       </div>
     </div>
-    <h2 class="projects">Projects</h2>
+    <h2 class="projects" id="Projects">Projects</h2>
     <!-- <div class="flexcontainer3>-->
     <div class="flexcontainer3">
       <div class="ignore"></div>
