added name instead of resume

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
   </head>
   <body>
     <div class="head">
-      <a
+      <h2 class="myname">Monami</h2>
+      <div id="myLinks">
+        <a
         href="https://docs.google.com/document/d/1IBA2sI4t04h3JnikAiuo7jrnKjGhZVrjQ8J2V1Lgkiw/edit?usp=drivesdk"
         class="active"
       > Resume
         <i class="fa-solid fa-user"></i
       > </a>
-      <div id="myLinks">
         <a href="index.html">Home</a>
         <a href="#Aboutme">About</a>
         <a href="#ContactMe">Contact</a>
